# maven-ai-training-repo

./: .gitignore  README.md  package-lock.json
The-AI-Engineer-Challenge/: Accessing_GPT_4_1_nano_Like_a_Developer.ipynb  LICENSE  (+1 more)
The-AI-Engineering-Certification-v1.0/00_Docs/Prerequisites/The_AI_Engineer_Onramp_Cohort_2/Session_01_AI_Assisted_Development/Advanced_assignment/: README_backend.md  app.py  pyproject.toml
The-AI-Engineering-Certification-v1.0/00_Docs/Prerequisites/The_AI_Engineer_Onramp_Cohort_2/Session_02_Back_End_Web_App_Development_&_Deployment_of_LLM_Applications/TreatOrHell/: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
The-AI-Engineering-Certification-v1.0/00_Docs/Prerequisites/The_AI_Engineer_Onramp_Cohort_2/Session_02_Back_End_Web_App_Development_&_Deployment_of_LLM_Applications/TreatOrHell/api/: index.py
The-AI-Engineering-Certification-v1.0/00_Docs/Prerequisites/The_AI_Engineer_Onramp_Cohort_2/Session_02_Back_End_Web_App_Development_&_Deployment_of_LLM_Applications/sample_backend_scripts/: README.md
The-AI-Engineering-Certification-v1.0/01_Dense_Vector_Retrieval/: .gitignore  01_Cat_Health_Vector_RAG_LangChain_Qdrant.ipynb  02_Cat_Health_Vector_RAG_From_Scratch.ipynb  README.md  pyproject.toml
The-AI-Engineering-Certification-v1.0/01_Dense_Vector_Retrieval/data/: README.md
The-AI-Engineering-Certification-v1.0/02_Agentic_RAG_LangGraph_LangChain/: 01_Cat_Health_Agentic_RAG_LangGraph_LangChain.ipynb  02_Cat_Health_Agentic_RAG_From_Scratch.ipynb  README.md  pyproject.toml
The-AI-Engineering-Certification-v1.0/02_Agentic_RAG_LangGraph_LangChain/data/: cat_health_guidelines.md
The-AI-Engineering-Certification-v1.0/03_Agent_Memory_LangGraph_LangChain/: .gitignore  01_Cat_Health_Agent_Memory_LangGraph_LangChain.ipynb  02_Cat_Health_Agent_Memory_From_Scratch.ipynb  README.md  pyproject.toml
The-AI-Engineering-Certification-v1.0/04_Multi_Agent_Systems/: .gitignore  01_Cat_Health_Deep_Research_Multi_Agent_LangChain_LangGraph.ipynb  README.md  pyproject.toml
The-AI-Engineering-Certification-v1.0/05_Synthetic_Data_Generation_for_RAG_Evals/: .gitignore  01_Cat_Health_Synthetic_Data_Generation_Ragas_LangSmith.ipynb  README.md  pyproject.toml
The-AI-Engineering-Certification-v1.0/06_Agentic_RAG_Evaluation/: 01_Metal_Price_Agent_Evaluation_Ragas_LangGraph.ipynb  README.md  pyproject.toml
The-AI-Engineering-Certification-v1.0/06_Agentic_RAG_Evaluation/data/: HealthWellnessGuide.txt
The-AI-Engineering-Certification-v1.0/07_Advanced_Retrievers/: .gitignore  01_Cat_Health_Advanced_Retrieval.ipynb  README.md  pyproject.toml
The-AI-Engineering-Certification-v1.0/08_MCP/: README.md  client.py  pyproject.toml  server.py
The-AI-Engineering-Certification-v1.0/08_MCP/app/: __init__.py  db.py  oauth.py  routes.py  server.py  tools.py
The-AI-Engineering-Certification-v1.0/09_Agent_Servers/: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  smoke_test.py
The-AI-Engineering-Certification-v1.0/09_Agent_Servers/app/: __init__.py  models.py  rag.py  tools.py
The-AI-Engineering-Certification-v1.0/09_Agent_Servers/app/graphs/: __init__.py  simple_agent.py
The-AI-Engineering-Certification-v1.0/09_Agent_Servers/frontend/: package-lock.json  package.json
The-AI-Engineering-Certification-v1.0/09_Agent_Servers/frontend/app/: layout.tsx  page.tsx
The-AI-Engineering-Certification-v1.0/09_Agent_Servers/frontend/app/api/[...path]/: route.ts
The-AI-Engineering-Certification-v1.0/09_Agent_Servers/frontend/components/: chat.tsx
The-AI-Engineering-Certification-v1.0/09_Agent_Servers/frontend/lib/: messages.ts
The-AI-Engineering-Certification-v1.0/10_LLM_Servers/: .env.example  ENDPOINT_SETUP.md  README.md  endpoint_slammer.ipynb  langgraph.json  main.py  pyproject.toml  ragas_evals.ipynb
The-AI-Engineering-Certification-v1.0/10_LLM_Servers/app/: __init__.py  models.py  rag.py  state.py  tools.py
The-AI-Engineering-Certification-v1.0/10_LLM_Servers/app/graphs/: __init__.py  agent_with_helpfulness.py  simple_agent.py
The-AI-Engineering-Certification-v1.0/12_Production_Agent_Patterns/: .env.example  01_Cat_Health_Agent_Guardrails.ipynb  02_Cat_Health_Agent_Caching.ipynb  README.md  pyproject.toml
The-AI-Engineering-Certification-v1.0/12_Production_Agent_Patterns/a2a/: README.md  client.py  front_desk.py  server.py  smoke_test.py
The-AI-Engineering-Certification-v1.0/14_multimodal_rag/: .env.example  README.md  multimodal_rag.ipynb  pyproject.toml
The-AI-Engineering-Certification-v1.0/14_multimodal_rag/data/: LICENSE  README.md  data_dictionary.json
The-AI-Engineering-Certification-v1.0/14_multimodal_rag/data/text/: doc_board_notes.md  doc_finance_costs.md  doc_gtm_strategy.md  doc_infrastructure.md  doc_people_ops.md  doc_product_roadmap.md
The-AI-Engineering-Certification-v1.0/14_multimodal_rag/data/video/: fy2024_review_transcript.json
The-AI-Engineering-Certification-v1.0/Certificate_Challenge/repomind/: .gitignore  DEPLOYMENT.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
The-AI-Engineering-Certification-v1.0/Certificate_Challenge/repomind/api/: chat.py
The-AI-Engineering-Certification-v1.0/Certificate_Challenge/repomind/app/: globals.css  layout.tsx  page.tsx
The-AI-Engineering-Certification-v1.0/Certificate_Challenge/repomind/components/: ChatInterface.tsx  MessageBubble.tsx  SourceBadge.tsx
The-AI-Engineering-Certification-v1.0/Certificate_Challenge/repomind/data/: chat_messages.json  docs.json  emails.json  ground_truth_eval.json  pull_requests.json
The-AI-Engineering-Certification-v1.0/Certificate_Challenge/repomind/eval/: __init__.py  requirements-eval.txt  results_dense_20260712_145011.json  results_hybrid_20260712_144326.json  results_hybrid_20260712_151159.json  run_eval.py
The-AI-Engineering-Certification-v1.0/Certificate_Challenge/repomind/lib/: types.ts
The-AI-Engineering-Certification-v1.0/Certificate_Challenge/repomind/rag/: __init__.py  agent.py  embeddings.py  knowledge_base.py  knowledge_graph.py  memory.py  retrieval.py  types.py
(+101 files in other folders)
