[project]
name = "aim-agent-memory-langgraph-langchain"
version = "0.1.0"
description = "Session 3 memory and graph-enhanced agentic RAG notebooks for AI Makerspace."
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "langchain>=1.3.0,<2.0.0",
    "langchain-openai>=1.2.0,<2.0.0",
    "langchain-qdrant>=1.0.0,<2.0.0",
    "langchain-text-splitters>=1.0.0,<2.0.0",
    "langgraph>=1.2.0,<2.0.0",
    "networkx>=3.5.0,<4.0.0",
    "numpy>=2.0.0,<3.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "qdrant-client>=1.15.0,<2.0.0",
]

[tool.uv]
package = false
