[project]
name = "aim-multi-agent-deep-research"
version = "0.1.0"
description = "Session 4 multi-agent deep research notebook for AI Makerspace."
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "langchain>=1.3.0,<2.0.0",
    "langchain-openai>=1.2.0,<2.0.0",
    "langchain-tavily>=0.2.0,<0.3.0",
    "langgraph>=1.2.0,<2.0.0",
    "nbformat>=5.10.0,<6.0.0",
    "pydantic>=2.12.0,<3.0.0",
]

[tool.uv]
package = false
