[project]
name = "aim-advanced-retrievers"
version = "0.1.0"
description = "Session 7 advanced retrieval notebooks for AI Makerspace."
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "langchain>=1.3.0,<2.0.0",
    "langchain-community>=0.4.0,<1.0.0",
    "langchain-cohere>=0.4.0,<1.0.0",
    "langchain-openai>=1.2.0,<2.0.0",
    "langchain-qdrant>=1.0.0,<2.0.0",
    "langchain-text-splitters>=1.0.0,<2.0.0",
    "pandas>=2.2.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pypdf>=6.0.0,<7.0.0",
    "qdrant-client>=1.15.0,<2.0.0",
    "rank-bm25>=0.2.2,<1.0.0",
]

[tool.uv]
package = false
