[project]
name = "aim-production-agent-patterns"
version = "0.1.0"
description = "Session 12 guardrails, caching, and A2A notebooks for AI Makerspace."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "langchain>=1.3.0,<2.0.0",
    "langchain-openai>=1.2.0,<2.0.0",
    "numpy>=2.0.0,<3.0.0",
    "openai>=1.100.0",
    "pydantic>=2.12.0,<3.0.0",
    "uvicorn>=0.34.0",
]

[tool.uv]
package = false
