[project]
name = "repomind-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "openai==2.15.0",
  "langgraph==0.2.70",
  "langchain-core==0.3.29",
  "langsmith==0.1.147",
  "qdrant-client==1.12.1",
  "tavily-python==0.5.0",
]

# Eval-only tools (ragas, datasets) are intentionally NOT declared here, even
# as an optional-dependencies group: `uv lock` resolves a single lockfile
# that must satisfy the base project and every extra simultaneously, and
# ragas pulls langchain-openai (openai<2.0.0), which conflicts with
# openai==2.15.0 above. That resolution failure is what breaks `uv lock` on
# Vercel. Install eval deps in a separate env via eval/requirements-eval.txt.
