[project]
name = "sentiment-analysis-api"
version = "0.1.0"
description = "FastAPI backend for sentiment analysis"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["app.py"]
